# opencv_raspi

./: README.md
src/opencv/: CMakeLists.txt  package.xml
src/opencv/src/: sub.cpp
